--- a/index.html
+++ b/index.html
@@ -26,44 +26,42 @@
             <h1 class="titulo" > Selecione um personagem</h1>
             <ul class="lista-de-personagens">
 
-                <li class="personagem selecionado" id="ciclope"data-name="Ciclope" data-description="Ele tem o poder de
-                disparar rajadas ópticas por um acidente que aconteceu com ele quando era criança, mas não consegue
-                controlá-los">
+                <li class="personagem selecionado" id="ciclope" data-name="Ciclope" data-description="Ele tem o poder de disparar rajadas ópticas 
+                por um acidente que aconteceu com ele quando era
+                 criança, mas não consegue controlá-los">
                     <img src="./src/imagens/card-ciclope.jpg" alt="Personagen ciclope">
                 </li>
 
-                <li class="personagem" id="jean-grey" data-name="Jean Grey" data-description="Jean Grey é uma mutante nível ômega e o principal avatar da Força
-                Fênix, no qual manifesta poderes cósmicos. A telepatia e telecinese">
+                <li class="personagem" id="jean-grey" data-name="Jean Grey" data-description="Jean Grey é uma mutante nível ômega e o principal avatar da Força Fênix, no qual manifesta 
+                poderes cósmicos. A telepatia e telecinese">
                     <img src="./src/imagens/card-jean-grey.jpg" alt="Personagen jean grey">
                 </li>
 
-                <li class="personagem" id="lince-negra" data-name="Lince Negra" data-description="Ela tem o poder de atravessar matéria sólida,campos de energia,rajadas
-                ópticas, continuando intacta,e também tem o poder de andar no ar">
+                <li class="personagem" id="lince-negra" data-name="Lince Negra" data-description="Ela tem o poder de atravessar matéria sólida,campos de energia,rajadas ópticas, continuando intacta, e também
+                 tem o poder de andar no ar">
                     <img src="./src/imagens/card-lince-negra.jpg" alt="Personagen lince negra">
                 </li>
 
-                <li class="personagem" id="tempestade" data-name="tempestade" data-description="Tem o poder de controlar as forças da natureza, muito poderosa ela pode
-                produzir raios, chuvas, gelos, ventos, neblina, entre outros efeitos">
+                <li class="personagem" id="tempestade" data-name="tempestade" data-description="Tem o poder de controlar as forças da natureza, muito poderosa ela pode produzir raios, chuvas, gelos,
+                 ventos, neblina, entre outros efeitos">
                     <img src="./src/imagens/card-tempestade.jpg" alt="Personagen tempestade">
                 </li>
 
-                <li class="personagem" id="vampira" data-name="vampira" data-description="Ela tem o poder de absorver a vitalidade e memória das pessoas que toca
-                ou no caso dos mutantes os poderes e a memória, mas só temporariamente">
+                <li class="personagem" id="vampira" data-name="vampira" data-description="Ela tem o poder de absorver a vitalidade e memória das pessoas que toca ou no caso dos mutantes os poderes e 
+                a memória, mas só temporariamente">
                     <img src="./src/imagens/card-vampira.jpg" alt="Personagen vampira">
                 </li>
 
-                <li class="personagem" id="wolverine" data-name="Wolverine" data-description="Poderes. Garras Metálicas. Fator de Cura Regenerativo, Super
-                Agilidade">
+                <li class="personagem" id="wolverine" data-name="Wolverine" data-description="Poderes. Garras Metálicas. Fator de 
+                Cura Regenerativo, Super Agilidade">
                     <img src="./src/imagens/card-wolverine.jpg" alt="Personagen wolverine">
                 </li>
 
-                <li class="personagem" id="noturno" data-name="Noturno" data-description="Ele é um mutante que nasceu com cauda, orelhas pontudas e com o
-                poder de se Teletransportar">
+                <li class="personagem" id="noturno" data-name="Noturno" data-description="Ele é um mutante que nasceu com cauda, orelhas pontudas e com o poder de se Teletransportar">
                     <img src="./src/imagens/card-noturno.jpg" alt="Personagen noturno">
                 </li>
 
-                <li class="personagem" id="magneto" data-name="Magneto" data-description="Ele tem o poder de magnetocinese, ou seja, controlar objetos de metal e
-                criar campos magnéticos">
+                <li class="personagem" id="magneto" data-name="Magneto" data-description="Ele tem o poder de magnetocinese, ou seja, controlar objetos de metal e criar campos magnéticos">
                     <img src="./src/imagens/card-magneto.jpg" alt="Personagen magneto">
                 </li>
 
